--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+    <div id="main">
+        <div id="heading" class="heading">		
+            <h1><u>This is a Heading</u></h1>
+        </div>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
