--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <div id="main">
+    <div class="main">
         <div id="heading" class="heading">		
             <h1><u>This is a Heading</u></h1>
         </div>
